[gd_scene load_steps=13 format=3 uid="uid://dr1u7tqmfdcre"]

[ext_resource type="Script" uid="uid://clukxavojk4s8" path="res://assets/scripts/main.gd" id="1_glv2v"]
[ext_resource type="Theme" uid="uid://d4j2qqvqmtl6w" path="res://Military.tres" id="1_r0du0"]
[ext_resource type="Texture2D" uid="uid://b1xa24akd0whh" path="res://battleship assets.png" id="2_uu6xs"]
[ext_resource type="Texture2D" uid="uid://86w68vb5nba8" path="res://assets/background_image.png" id="3_cm0pq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fos0i"]
texture = ExtResource("3_cm0pq")
modulate_color = Color(0.2484, 0.2484, 0.2484, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r0du0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uu6xs"]
atlas = ExtResource("2_uu6xs")
region = Rect2(497, 2349, 1444, 553)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0du0"]
atlas = ExtResource("2_uu6xs")
region = Rect2(3571, 2349, 1443, 529)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm0pq"]
atlas = ExtResource("2_uu6xs")
region = Rect2(2055, 2349, 1444, 537)

[sub_resource type="AtlasTexture" id="AtlasTexture_fos0i"]
atlas = ExtResource("2_uu6xs")
region = Rect2(497, 2960, 1444, 552)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dxm6"]
atlas = ExtResource("2_uu6xs")
region = Rect2(3571, 2960, 1443, 529)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgr22"]
atlas = ExtResource("2_uu6xs")
region = Rect2(2055, 2960, 1444, 536)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r0du0")
script = ExtResource("1_glv2v")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fos0i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -129.0
offset_right = 165.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Battleship: Oceanic Strike"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_r0du0")

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Play"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Continue Last Game"

[node name="HistoryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "History"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Quit"

[node name="PlayButtonTexture" type="TextureButton" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_uu6xs")
texture_pressed = SubResource("AtlasTexture_r0du0")
texture_hover = SubResource("AtlasTexture_cm0pq")
ignore_texture_size = true
stretch_mode = 5

[node name="QuitButtonTexture" type="TextureButton" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_fos0i")
texture_pressed = SubResource("AtlasTexture_3dxm6")
texture_hover = SubResource("AtlasTexture_lgr22")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HistoryButton" to="." method="_on_history_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayButtonTexture" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButtonTexture" to="." method="_on_quit_button_pressed"]
